--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <figure>
             <img src="assets/image/pht_cource01.jpg" alt="高校生">
           </figure>
-          <p> 高校生</p>
+          <p> 高卒生</p>
         </li>
         <li>
           <figure>
@@ -212,7 +212,7 @@
         </tr>
         <tr>
           <th>10講</th>
-          <td>24,500<span>円</span></td>
+          <td>49,000<span>円</span></td>
         </tr>
         <tr>
           <th>11講</th>
