--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
           <span ></span>
           <span ></span>
       </div>
+      <ul id="slide" class="on" >
+        <li><a href="#reason">選ばれる３つの理由</a></li>
+        <li><a href="#course">コース・目的</a></li>
+        <li><a href="#cost">費用</a></li>
+        <li><a href="https://example.com/entry" class="btn">入学説明会に申し込む</a></li>
+      </ul>
     </div>
   </header>
   <div class="main_visual">
@@ -52,12 +58,6 @@
         <h3>入学説明会の お申し込み開始</h3>
       </div>
     </div>
-    <ul id="slide" class="on" >
-      <li><a href="#reason">→選ばれる３つの理由</a></li>
-      <li><a href="#course">→コース・目的</a></li>
-      <li><a href="#cost">→費用</a></li>
-      <li><a href="https://example.com/entry" class="btn">入学説明会に申し込む</a></li>
-    </ul>
   </div>
   <section class="select container">
     <ul>
@@ -245,13 +245,19 @@
     <ul>
       <li>
         <div class="left">
-          <a href="https://example.com/faq"><img src="assets/image/pht_qa.jpg.jpg" alt="Q&A"></a>
-          <h3>よくあるご質問</h3>
-        </div>
-      </li>
-      <li>
-        <div class="right">
-          <a href="https://example.com/search"><img src="assets/image/pht_classrooms.jpg.jpg" alt="search"></a>
+          <a href="https://example.com/faq">
+            <img class="pc" src="assets/image/pht_qa.jpg.jpg" alt="Q&A">
+            <img class="sp" src="assets/image/phtsp_qa.png" alt="Q&A">
+          </a>
+            <h3>よくあるご質問</h3>
+          </div>
+          </li>
+          <li>
+            <div class="right">
+              <a href="https://example.com/search">
+                <img class="pc" src="assets/image/pht_classrooms.jpg.jpg" alt="search">
+                <img class="sp" src="assets/image/phtsp_classrooms.png" alt="search">
+          </a>
           <h3>お近くの教室を探す</h3>
         </div>
       </li>
