--- a/index.html
+++ b/index.html
@@ -44,18 +44,20 @@
     </div>
   </header>
   <div class="main_visual">
-    <div class="catch">
-      <div class="upper">
-          <img src="assets/image/frame-left.png" alt="left-frame">
-          <div class="words">
-            <p>難関大学の合格実績</p>
-            <h2>No.<span>1</span></h2>
-          </div>
-          <img src="assets/image/frame-right.png" alt="right-frame">
-      </div>
-      <div class="lower">
-        <h4>現役高校生・高卒生</h4>
-        <h3>入学説明会の お申し込み開始</h3>
+    <div class="container">
+      <div class="catch ">
+        <div class="upper">
+            <img src="assets/image/frame-left.png" alt="left-frame">
+            <div class="words">
+              <p>難関大学の合格実績</p>
+              <h2>No.<span>1</span></h2>
+            </div>
+            <img src="assets/image/frame-right.png" alt="right-frame">
+        </div>
+        <div class="lower">
+          <h4>現役高校生・高卒生</h4>
+          <h3>入学説明会の お申し込み開始</h3>
+        </div>
       </div>
     </div>
   </div>
